tests/paczka1/fuzzy1/72606062.err
Error in line 9: Wcm5s S522 -1,6
Error in line 10: ICDDAbuCpP S880 92,7
Error in line 7: S710 S880 86,6
Error in line 2: B3KynQy S522 3,9
Error in line 6: Wcm5s S522 20,1
Error in line 27: ICDDAbuCpP S710 52,4
Error in line 17: B3KynQy S189 58,7
Error in line 37: S710 S189 5,7
